# autonomous-intelligent-memory-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manual_test_instructions.md  pyproject.toml  ruff.toml  self_correction_test_guide.md  start-demo.sh  temp.md  test_chat.py  test_self_correction.py
dashboard/: README.md
dashboard/dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/dashboard/src/: App.tsx
dashboard/dashboard/src/components/: Chat.tsx  Layout.tsx  Memory.tsx  Settings.tsx  Statistics.tsx
docs/: AI_Agent_Specification.md  LLM_Providers.md  Main_Use_Cases.md
examples/: basic_usage.py  test_llm_providers.py  test_relevance_evaluation.py  tui_demo.py  tui_preview.py
src/memory_agent/: __main__.py  cli.py
src/memory_agent/core/: agent.py  agent_service.py
src/memory_agent/core/correction/: self_corrector.py
src/memory_agent/core/entities/: __init__.py  conversation_block.py  message.py  message_chain.py
src/memory_agent/core/evaluation/: __init__.py  base.py  composite_evaluator.py  heuristic_evaluator.py  llm_evaluator.py  service.py
src/memory_agent/core/interfaces/: __init__.py  agent.py  evaluator.py  llm.py  message.py  storage.py  tool.py
src/memory_agent/infrastructure/api/: __init__.py  app.py
src/memory_agent/infrastructure/api/routes/: __init__.py  agent.py  evaluation.py  health.py  llm.py  memory.py  session.py
src/memory_agent/infrastructure/api/websocket/: __init__.py  connection_manager.py  events.py  handlers.py
src/memory_agent/infrastructure/cli/tui/: __init__.py  app.py
src/memory_agent/infrastructure/cli/tui/screens/: __init__.py  debug.py  log.py
src/memory_agent/infrastructure/cli/tui/widgets/: __init__.py  memory_monitor.py  message_chain.py  relevance_meter.py  tool_tracker.py
src/memory_agent/infrastructure/config/: settings.py
src/memory_agent/infrastructure/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  service.py
src/memory_agent/infrastructure/storage/: __init__.py  manager.py  memory_store.py
tests/: test_tui_components.py
